infraestrutura/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: blog-django-py-git
  generation: 2
  namespace: group001fiap
  labels:
    app: blog-django-py-git
    app.kubernetes.io/component: blog-django-py-git
    app.kubernetes.io/instance: blog-django-py-git
    app.kubernetes.io/name: python
    app.kubernetes.io/part-of: blog-django-py-git-app
    app.openshift.io/runtime: python
    app.openshift.io/runtime-version: 3.8-ubi7
spec:
  replicas: 1
  selector:
    matchLabels:
      app: blog-django-py-git
  template:
    metadata:
      labels:
        app: blog-django-py-git
        deploymentconfig: blog-django-py-git
    spec:
      containers:
        - name: blog-django-py-git
          image: openshiftkatacoda/blog-django-py
          ports:
            - containerPort: 8080
              protocol: TCP
          resources: {}
          imagePullPolicy: Always
      restartPolicy: Always
