infraestrutura/service.yml
kind: Service
apiVersion: v1
metadata:
  name: blog-ingress
  namespace: group001fiap
  labels:
    app: blog-django-py-git
    app.kubernetes.io/component: blog-django-py-git
    app.kubernetes.io/instance: blog-django-py-git
    app.kubernetes.io/name: python
    app.kubernetes.io/part-of: blog-django-py-git-app
    app.openshift.io/runtime: python
    app.openshift.io/runtime-version: 3.8-ubi7
spec:
  ports:
    - name: 8080-tcp
      protocol: TCP
      port: 8080
      targetPort: 8080
  selector:
    app: blog-django-py-git
    deploymentconfig: blog-django-py-git
  type: LoadBalancer
  sessionAffinity: None
  externalTrafficPolicy: Cluster
