infraestrutura/Ingress.yml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: blog-django-py-group001fiap
  namespace: group001fiap
spec:
  rules:
    - host: blog-django-py-group001fiap.com
      http:
        paths:
          - path: /api/v1/namespaces/group001fiap/services/blog-django-py-git
            backend:
              serviceName: blog-django-py-git
              servicePort: 8080
