infraestrutura/route.yml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  annotations:
    openshift.io/host.generated: 'true'
  name: blog-ingress
  namespace: group001-fiap
  labels:
    app: blog-django-py-git
    app.kubernetes.io/component: blog-django-py-git
    app.kubernetes.io/instance: blog-django-py-git
    app.kubernetes.io/name: python
    app.kubernetes.io/part-of: blog-django-py-git-app
    app.openshift.io/runtime: python
    app.openshift.io/runtime-version: 3.8-ubi7
spec:
  host: blog-django-py-git-group001-fiap.apps.na46.prod.nextcle.com
  to:
    kind: Service
    name: blog-django-py-git
    weight: 100
  port:
    targetPort: 8080-tcp
  wildcardPolicy: None
